1.0.0.1 little fix on mobiles

--- a/src/Components/FooterSection/FooterSection.module.scss
+++ b/src/Components/FooterSection/FooterSection.module.scss
@@ -59,6 +59,10 @@
   flex-direction: row;
   font-weight: 800;
 
+  @media screen and (max-width: 800px){
+    flex-direction: column;
+  }
+
   *{
     cursor: pointer;
   }
